--- a/LabReportTemplate.tex
+++ b/LabReportTemplate.tex
@@ -16,8 +16,8 @@
 \usepackage{fullpage}
 \usepackage{multicol}
 \begin{document}
-\title{\textbf{Strain Gauge Lab Report}}
-\author{Domantas Butnorius}
+\title{\textbf{}}
+\author{}
 \date{\today}
 \maketitle
 \pagenumbering{gobble}
