--- a/Templates/NotesTemplate.tex
+++ b/Templates/NotesTemplate.tex
@@ -19,7 +19,7 @@
 \usepackage{multicol}
 \begin{document}
 \title{\textbf{Title}}
-\author{Domantas Butnorius}
+\author{}
 \date{\today}
 \maketitle
 \pagenumbering{gobble}
