--- a/Templates/NotesTemplate.tex
+++ b/Templates/NotesTemplate.tex
@@ -1,4 +1,5 @@
 % arara: pdflatex
+% arara: pdflatex
 \documentclass{article}
 \usepackage{indentfirst}
 \usepackage{fullpage}
@@ -18,14 +19,13 @@
 }
 \usepackage{multicol}
 \begin{document}
-\title{\textbf{Title}}
-\author{}
+\title{\textbf{<++>}}
+\author{<++>}
 \date{\today}
 \maketitle
 \pagenumbering{gobble}
 \newpage
 \pagenumbering{arabic}
 \tableofcontents
-\section{Introduction}
-wagesrtfefreth
+\section{<++>}
 \end{document}
